[package]
name = "deviantart"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itoa = "1.0.2"
once_cell = { version = "1.13.0", default-features = false }
regex = "1.6.0"
reqwest = { version = "0.11.11", default-features = false, features = [ "cookies", "gzip", "json" ] }
reqwest_cookie_store = "0.4.0"
serde = { version = "1.0.140", features = [ "derive" ] }
serde_json = "1.0.82"
thiserror = "1.0.37"
tokio = { version = "1.20.0", features = [ "rt" ] }
url = { version = "2.2.2", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.20.0", features = [ "macros", "fs" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
