[package]
name = "deviantart"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "deviantart"
path = "src/cli/main.rs"
required-features = [ "cli" ]

[dependencies]
itoa = "1.0.2"
once_cell = { version = "1.16.0", default-features = false }
regex = "1.7.0"
reqwest = { version = "0.11.13", default-features = false, features = [ "cookies", "gzip", "json" ] }
reqwest_cookie_store = "0.5.0"
serde = { version = "1.0.140", features = [ "derive" ] }
serde_json = "1.0.82"
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = [ "rt" ] }
url = { version = "2.2.2", features = [ "serde" ] }

# Optional
argh = { version = "0.1.8", optional = true }
anyhow = { version = "1.0.58", optional = true }
directories-next = { version = "2.0.0", optional = true }
toml = { version = "0.5.9", features = [ "preserve_order" ], optional = true }

[dev-dependencies]
tokio = { version = "1.22.0", features = [ "macros", "fs" ] }

[features]
default = [ "reqwest/default-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]

cli = [ 
    "argh",
    "anyhow",
    "directories-next",
    "tokio/fs",
    "tokio/rt-multi-thread",
    "toml",
]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"