[package]
name = "deviantart-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
argh = "0.1.12"
anyhow = "1.0.89"
deviantart = { path = "../deviantart", default-features = false }
directories-next = "2.0.0"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "download-to-path" ] }
toml = { version = "0.8.19", features = [ "preserve_order" ] }
tokio = { version = "1.40.0", features = [ "rt-multi-thread", "fs" ] }
serde = { version = "1.0.210", features = [ "derive" ] }

[features]
default = [
    "rustls-tls",
]
native-tls = [
    "deviantart/native-tls",
]
rustls-tls = [
    "deviantart/rustls-tls",
]
