[package]
name = "deviantart-cli"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
argh = "0.1.13"
anyhow = "1.0.100"
deviantart = { path = "../deviantart", default-features = false }
directories-next = "2.0.0"
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", features = [ "download-to-path" ] }
toml = { version = "0.9.11", features = [ "preserve_order" ] }
tokio = { version = "1.49.0", features = [ "rt-multi-thread", "fs" ] }
serde = { version = "1.0.228", features = [ "derive" ] }

[features]
default = [
    "rustls-tls",
]
native-tls = [
    "deviantart/native-tls",
]
rustls-tls = [
    "deviantart/rustls-tls",
]
