[package]
name = "deviantart-py"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "deviantart_py"
crate-type = [ "cdylib" ]

[dependencies]
deviantart = { version = "0.0.0", path = "../deviantart" }
pyo3 = { version = "0.27.2", features = [ "abi3", "abi3-py310" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = [ "rt-multi-thread" ] }
