[package]
name = "deviantart-py"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "deviantart_py"
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0.102"
deviantart = { version = "0.0.0", path = "../deviantart" }
pyo3 = { version = "0.28.3", features = [ "abi3", "abi3-py310", "anyhow" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = [ "rt-multi-thread" ] }
