[package]
name = "deviantart"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cookie_store = { version = "0.22.0", default-features = false }
itoa = "1.0.15"
once_cell = { version = "1.21.3", default-features = false }
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = [ "cookies", "gzip", "json", "http2" ] }
reqwest_cookie_store = "0.8.2"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = [ "rt" ] }
url = { version = "2.5.4", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.47.0", features = [ "macros", "fs", "rt-multi-thread" ] }

[features]
default = [ "rustls-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
