[package]
name = "deviantart"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cookie_store = { version = "0.22.0", default-features = false }
itoa = "1.0.17"
once_cell = { version = "1.21.3", default-features = false }
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = [ "cookies", "gzip", "json", "http2" ] }
reqwest_cookie_store = "0.9.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "rt" ] }
url = { version = "2.5.7", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros", "fs", "rt-multi-thread" ] }

[features]
default = [ "rustls-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
