[package]
name = "deviantart"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
cookie_store = { version = "0.22.1", default-features = false }
itoa = "1.0.18"
once_cell = { version = "1.21.4", default-features = false }
regex = "1.12.3"
reqwest = { version = "0.13.4", default-features = false, features = [ "cookies", "gzip", "json", "http2", "form" ] }
reqwest_cookie_store = "0.10.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [ "rt" ] }
url = { version = "2.5.8", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.52.3", features = [ "macros", "fs", "rt-multi-thread" ] }

[features]
default = [ "rustls-tls" ]

native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls" ]
